--- a/scss/_generals.scss
+++ b/scss/_generals.scss
@@ -4,7 +4,8 @@ html {
 
 body {
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 
-  @include display($fd: column, $jc: unset, $ai: unset);
-  // font-family: ;
+  font-family: "Heebo", sans-serif;
 }
