--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -2,4 +2,7 @@
 @import "./intro";
 @import "./posts";
 @import "./works";
+@import "./blog";
+@import "./work";
+@import "./detail";
 @import "./footer";
