--- a/scss/blocks/_works.scss
+++ b/scss/blocks/_works.scss
@@ -37,6 +37,11 @@
   border-bottom: 1px solid #e0e0e0;
 }
 
+.works__item:nth-child(4) {
+  padding-bottom: 52px;
+  border-bottom: 1px solid #e0e0e0;
+}
+
 .works__item-img {
   width: 246px;
   height: 180px;
