--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -42,16 +42,59 @@
     padding: 20px 18px 80px;
   }
 }
+
 @media (max-width: 425px) {
   .site-header {
+    height: 80px;
+    
     padding: 20px 18px 42px;
   }
 
-  .header__mob {
+  .header__nav--mobile {
+    padding: 20px 18px 42px;
+
+    position: fixed;
+
+    right: 0;
+    top: 0;
+
+    width: 50%;
+    height: 100%;
+
+    background-color: #fff;
+  }
+
+  .header__nav--mobile .header__list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    row-gap: 20px;
+  }
+
+  .header__nav--mobile .header__mob {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
+  }
+
+  .header__mob {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    width: 30px;
+    height: 18px;
+  }
+
+  .header__mob span {
+    width: 100%;
+    height: 2px;
+
+    display: block;
+
+    background-color: var(--text-color);
   }
 
   .header__list {
